--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">RayoAI</string>
+    <string name="tab_home">Home</string>
+    <string name="tab_history">History</string>
+    <string name="tab_about">About</string>
+    <string name="tab_settings">Settings</string>
     <string name="describe_image_label">Describe image</string>
     <string name="settings_title">Settings</string>
     <string name="channel_name">RayoAI Descriptions</string>
