--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -197,4 +197,7 @@
   <string name="rating_banner_text">Wenn Ihnen RayoAI gefällt, bewerten Sie uns bitte im Play Store</string>
   <string name="rating_banner_later">Nicht jetzt</string>
   <string name="rating_banner_rate">Rate</string>
+  <string name="donation_banner_text">If you find RayoAI useful, please consider supporting its development with a donation.</string>
+  <string name="donation_banner_donate">Donate</string>
+  <string name="donation_banner_later">Later</string>
 </resources>
