--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -197,4 +197,7 @@
   <string name="rating_banner_text">Se você gosta do RayoAI, avalie-nos na Play Store</string>
   <string name="rating_banner_later">Agora não</string>
   <string name="rating_banner_rate">Avaliar</string>
+  <string name="donation_banner_text">If you find RayoAI useful, please consider supporting its development with a donation.</string>
+  <string name="donation_banner_donate">Donate</string>
+  <string name="donation_banner_later">Later</string>
 </resources>
