--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -197,4 +197,7 @@
   <string name="rating_banner_text">如果您喜欢 RayoAI，请在 Play 商店中为我们评分</string>
   <string name="rating_banner_later">现在不要</string>
   <string name="rating_banner_rate">评价</string>
+  <string name="donation_banner_text">If you find RayoAI useful, please consider supporting its development with a donation.</string>
+  <string name="donation_banner_donate">Donate</string>
+  <string name="donation_banner_later">Later</string>
 </resources>
